# lunchlog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Improvements.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: class-diagram.puml  entity-diagram.puml  sequence-diagram.puml
lunchlog/: .env-example  conftest.py  loadenv.py  manage.py  pytest.ini  schema.yml
lunchlog/common/: models.py
lunchlog/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
lunchlog/food_recommendation/: apps.py  urls.py
lunchlog/food_recommendation/api/: serializers.py  views.py
lunchlog/food_recommendation/tests/: test_apis.py
lunchlog/google_places_api/: api.py  exceptions.py
lunchlog/google_places_api/tests/: conftest.py  test_google_api.py  test_google_api_exceptions.py
lunchlog/lunch/: admin.py  models.py  services.py  urls.py
lunchlog/lunch/api/: google_places_api.py  serializers.py  views.py
lunchlog/lunch/migrations/: 0001_initial.py  0002_receipt_user.py  0003_receipt_file.py  0004_alter_receipt_uuid.py  0005_remove_receipt_address_remove_receipt_file_and_more.py  0006_alter_receipt_date.py  0007_restaurant_alter_receipt_date_alter_receipt_price_and_more.py  0008_restaurant_receipt.py  0009_alter_restaurant_delivery_and_more.py  0010_restaurant_place_id.py  0011_rename_address_restaurant_formatted_address_and_more.py  0012_restaurant_user.py  (+1 more)
lunchlog/lunchlog/: asgi.py  settings.py  urls.py  wsgi.py
lunchlog/templates/: base.html
lunchlog/users/: admin.py  managers.py  models.py  urls.py
(+25 files in other folders)
